--- a/app/components/MainWindow/mainwindow.scss
+++ b/app/components/MainWindow/mainwindow.scss
@@ -1,3 +1,8 @@
 .mainWindow {
-    background-color: black;
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100vh;
+    // margin: 25px;
+    background-color: #333;
 }
