--- a/app/components/StatsWindow/statsWindow.scss
+++ b/app/components/StatsWindow/statsWindow.scss
@@ -3,6 +3,14 @@
              
     }
 }
+.abilities-list {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+    
+}
 
 
 
