--- a/app/components/MainWindow/mainwindow.scss
+++ b/app/components/MainWindow/mainwindow.scss
@@ -3,6 +3,13 @@
         margin-right: -20vw;
     }
 }
+
+.window-title {
+    margin-left: 15px;
+    text-transform: uppercase;
+    font-weight: lighter;
+}
+
 .mainWindow {
     display: block;
     box-sizing: border-box;
@@ -14,7 +21,7 @@
 }
 
 .rightPanel {
-    margin:0;
+    margin: 0;
     height: 100%;
     width: 20vw;
     float: right;
@@ -23,8 +30,18 @@
     animation: showFromRight 0.3s ease-out;
 }
 
-.window-title {
-    margin-left: 15px;
-    text-transform: uppercase;
-    font-weight: lighter;
+
+.centerPanel-container {
+    float: left;
+    width: 80vw;
+    height: 100%;
+    padding: 15px;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.centerPanel {
+    width: 100%;
+    height: 100%;
+    
 }
