Red mark on dead monster

--- a/app/components/MobsPanel/mobTile.scss
+++ b/app/components/MobsPanel/mobTile.scss
@@ -37,12 +37,15 @@ $tile_size: 50px;
         }
     }
     
-    .mob-dead, .mob-alive {
+    .mob-dead {
         display: block;
         width: 100%;
         height: 100%;
         padding: 0;
         margin: 0;
+        font-size: $tile_size;
+        text-align: center;
+        color: #A1110A;
         
     }
     
